# STM32_Industrial_Motion_Controller

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
cmake/: arm-none-eabi-gcc.cmake
config/firmware/: ATK_StepMotor.ioc
docs/specifications/: 工业运动控制卡开发需求.md
docs/technical/: PROJECT_DEVELOPMENT_HISTORY.md  TECHNICAL_ARCHITECTURE.md
docs/user_guides/: QUICK_START_GUIDE.md  README_Advanced_Motion_Control.md  README_GCode_Parser.md  README_ServoMotion_Demo.md  README_StepMotor.md  README_工业运动控制卡.md
firmware/include/: error_codes.h  motion_control_stub.h
firmware/linker/: STM32F407IGTX_FLASH.ld
firmware/src/app/communication/: communication.c  industrial_communication.c  industrial_communication.h
firmware/src/app/diagnostics/: fault_diagnosis.c  fault_diagnosis.h
firmware/src/app/gcode/: gcode_executor.c  gcode_executor.h  gcode_parser.c  gcode_parser.h
firmware/src/app/motion/: advanced_interpolation.c  advanced_interpolation.h  advanced_motion_control.c  motion_control.c  motion_control.h  position_control.c
firmware/src/core/: error_handler.c  industrial_motion_controller.c  industrial_motion_controller.h  synchronous_control.c  synchronous_control.h
firmware/src/demos/: industrial_motion_demo.c  position_control_demo.c  servo_motion_demo.c  servo_motion_demo.h
firmware/src/platform/: main.c  main.h  stm32f4xx_hal_msp.c
hardware/datasheets/: ATK-DMF407IO以及接口分配表.xlsx
tests/unit/: test_advanced_motion.c  test_gcode_parser.c
tools/scripts/: basic_build.sh  build.py  build_advanced_motion.sh  build_basic.ps1  build_fsmc_test.sh  build_gcode_test.sh  build_industrial_motion.sh  build_servo_motion_demo.ps1  build_unified.sh  build_windows.bat  manual_build.sh  minimal_build.sh
